--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^10.0.0",
     "facebook-sdk": "^0.3.3",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.5.0",
